moved about bg image from center to right at 768 or below to resolve readability issues over plane

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -552,6 +552,7 @@ span,
     .about {
         display: flex;
         justify-content: center;
+        background-position: right;
     }
 
     .about-title {
